// Copyright (C) 2021-2024 Lightbend Inc. <https://www.lightbend.com>

syntax = "proto3";
package org.example.service;

import "google/protobuf/empty.proto";
import "kalix/annotations.proto";

option java_outer_classname = "ServiceOuterClass";

// to test that we generate a reasonable name
service MyServiceAction {
  option (kalix.service) = {
    type : SERVICE_TYPE_ACTION
  };

  rpc simpleMethod(MyRequest) returns (google.protobuf.Empty) {}
}

message MyRequest {}