syntax = "proto3";
package com.example.json;

// tag::service[]
import "akkaserverless/annotations.proto";
import "google/protobuf/any.proto";
import "google/protobuf/empty.proto";

option java_outer_classname = "MyServiceApi";

message KeyValue {
  string key = 1;
  int32 value = 2;
}

service MyService {
  option (akkaserverless.codegen) = {
    action: {}
  };

  rpc Consume(google.protobuf.Any) returns (google.protobuf.Empty) { // <1>
    option (akkaserverless.method).eventing.in = {
      topic:  "notifications"
    };
  }

  rpc Produce(KeyValue) returns (google.protobuf.Any) { // <2>
    option (akkaserverless.method).eventing.out = {
      topic:  "notifications"
    };
  }
  
}
// end::service[]
